# mapping-natur40

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
conf/: settings-default.toml
docker-files/: natur40-dependencies.csv  settings.toml
docs/: configuration.md
src/: CMakeLists.txt
src/services/: natur40.cpp  nature40.cpp
test/: CMakeLists.txt
