
#add_library(mapping_natur40_unittests_lib OBJECT
#        )

#target_include_directories(mapping_natur40_unittests_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
#target_include_directories(mapping_natur40_unittests_lib PRIVATE ${MAPPING_CORE_PATH}/src)

#target_include_directories(mapping_natur40_unittests_lib PRIVATE ${jsoncpp_SOURCE_DIR}/include)
#target_include_directories(mapping_natur40_unittests_lib PRIVATE ${cpptoml_SOURCE_DIR}/include)

#list(APPEND systemtests ####)
#set(systemtests ${systemtests} PARENT_SCOPE)
